# polysh

./: .gitignore  .hgtags  .install-rpm.sh  .travis.yml  CHANGELOG.rst  MANIFEST.in  NEWS  NEWS.md  README  README.md  README.rst  TODO  bdist_rpm-install_script  flake.nix  gsh.1  gsh.py  install-rpm.sh  polysh.1  polysh.py  pyproject.toml  release.sh  run.py  setup.cfg  setup.py  setuptools-0.6c3-py2.4.egg  setuptools-0.6c5-py2.4.egg  setuptools-0.6c6-py2.4.egg  setuptools-0.7a1dev_r53614-py2.4.egg
docs/: polysh.rst
gsh/: buffered_dispatcher.py  callbacks.py  completion.py  console.py  control_commands.py  control_commands_helpers.py  control_shell.py  dispatchers.py  display_names.py  file_transfer.py  host_syntax.py  main.py  pity.py  rb_tree.py  remote_dispatcher.py  stdin.py  stdin_reader.py  terminal_size.py
patches/: type-hints.diff
polysh/: __init__.py  buffered_dispatcher.py  callbacks.py  completion.py  console.py  control_commands.py  control_commands_helpers.py  dispatchers.py  display_names.py  file_transfer.py  host_syntax.py  main.py  pity.py  rb_tree.py  remote_dispatcher.py  stdin.py  terminal_size.py
src/polysh/: __init__.py  buffered_dispatcher.py  callbacks.py  completion.py  connection.py  console.py  control_commands.py  control_commands_helpers.py  dispatcher_registry.py  dispatchers.py  display_names.py  event_loop.py  exceptions.py  host_syntax.py  main.py  remote_dispatcher.py  stdin.py  terminal_size.py
tests/: __init__.py  basic.py  benchmark.py  command_line.py  coverage.py  gsh_tests.py  host_syntax.py  non_interactive.py  password_file.py  pexpect.py  polysh_tests.py  requirements.txt  test_basic.py  test_command_line.py  test_control_commands.py  test_dispatcher_registry.py  test_display_names.py  test_event_loop.py  test_host_syntax.py  test_non_interactive.py  test_password_file.py
tests/tests/: __init__.py  basic.py  command_line.py  control_commands.py  control_shell.py  display_names.py  file_transfer.py  host_syntax.py  non_interactive.py  password_file.py
