[metadata]
name  =  polysh
version = attr: polysh.VERSION
url = https://github.com/innogames/polysh
maintainer = InnoGames System Administration,
maintainer_email = it@innogames.com,
description =
    polysh is used to launch several remote shells on many machines at
     the same time and control them from a single command prompt.
long_description = file: README.rst, CHANGELOG.rst
license = GPL

[options]
packages =
    polysh

[entry_points]
console_scripts =
    polysh = polysh.main:main
