[metadata]
name = polysh
version = attr: polysh.VERSION
url = https://github.com/innogames/polysh
maintainer = InnoGames System Administration,
maintainer_email = it@innogames.com,
description = control thousands of ssh sesions from a single prompt
long_description = file: README.rst, CHANGELOG.rst
license = GPL-2.0

[options]
python_requires = >=3.4
packages =
    polysh

[options.entry_points]
console_scripts =
    polysh = polysh.main:main

[flake8]
max-complexity = 10
ignore =
